[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eutilsutils"
version = "0.0.1"
authors = [
  { name="Firas Wehbe", email="firas.wehbe@gmail.com" },
]
description = "A small example package that tells you what you need to hear"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy >= 1.4",
    "biopython >= 1.78",
    "rich >= 12.5"
]

[tool.setuptools]
packages = ["eutilsutils"]